syntax = "proto3";
option go_package="./test";
import "google/api/annotations.proto";

package booking;

service BookingService {
  rpc CreateBook(CreateBookRequest) returns (Book) {
    option (google.api.http) = {
      post: "/books"
      body: "*"
    };
  }
  rpc ReadBook(ReadBookRequest) returns (Book) {
    option (google.api.http) = {
      get: "/books/{id}"
    };
  }
  rpc UpdateBook(UpdateBookRequest) returns (Book) {
    option (google.api.http) = {
      put: "/books/{id}"
      body: "*"
    };
  }
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse) {
    option (google.api.http) = {
      delete: "/books/{id}"
    };
  }
}

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
  string language = 5;
  repeated string genres = 6;
  int32 price = 7;
  int32 quantity = 8;
}

message CreateBookRequest {
  Book book = 1;
}

message ReadBookRequest {
  int64 id = 1;
}

message UpdateBookRequest {
  int64 id = 1;
  Book book = 2;
}

message DeleteBookRequest {
  int64 id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}
